# infers-jsonschema

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml
benches/: infers.rs
infers_jsonschema/: __init__.py
src/: inference.rs  lib.rs
tests/: test_inference.py
