[package]
name = "infers-jsonschema"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "infers_jsonschema"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
serde = "1.0.103"
chrono = "0.4.10"
rayon = "1.3.0"

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]

[profile.release]
lto = true
